--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,7 +33,13 @@
                             <h4>情绪对警觉的影响：基于注意网络的分析</h4>
                         </div>
                         <p class="home-description">
-                            您好，我们现在要做一个跟警觉有关的实验！
+                            终于等到你~
+                            <br>
+                            欢迎您来参加我们的实验。
+                            <br>
+                            如果您已阅读完以下内容，
+                            <br>
+                            请下滑至实验入口处。
                         </p>
                         <div class="btn-group-vertical custom_btn animated slideinright">
                             <div id="about" class="btn btn-rabbit">实验简介</div>
@@ -48,8 +54,7 @@
                 <div class="container main">
                     <div class="row">
                         <div class="col-md-6 left" id="about_left">
-                            <img class="img-responsive img-rabbit" src="assets/images/about.jpg">
-                            <img class="img-responsive img-rabbit" src="assets/images/contact.jpg">
+                            <img class="img-responsive img-rabbit" src="assets/images/face.jpg">
                         </div>
 
                         <div class="col-md-6 right" id="about_right">
@@ -57,9 +62,18 @@
                                 <h2 class="page-title" text-center>赶快进入实验吧~~</h2>
                                 <div class="marker">r</div>
                             </div>
-                            <p class='subtitle'>问卷
+                            <p class='subtitle'>
                             </p>
-                            <p class="info">实验
+                            <p class="info">
+                              <div style="margin:0 auto;width:200px;">
+                              <br>
+                              <br>
+                              <br>
+                              <br>
+                              <input type=button value="进入问卷" class="btn btn-primary btn-lg" onclick="window.open('https://bnupsych.asia.qualtrics.com/jfe/form/SV_a5xjFkddYHiu513')">
+                              <img src="assets/images/qualtrics.png">
+                              <input type=button value="进入实验" class="btn btn-primary btn-lg" onclick="window.open('http://www.baidu.com/')">
+                              </div>
                             </p>
                         </div>
                     </div>
@@ -147,7 +161,7 @@
             <div class="container main">
                 <div class="row">
                     <div class="col-md-6 left" id="contact_left">
-                        <img class="img-responsive img-rabbit" src="assets/images/contact.jpg">
+                        <img class="img-responsive img-rabbit" src="assets/images/Posner.jpg">
                     </div>
 
                     <div class="col-md-6 right" id="contact_right">
@@ -156,7 +170,24 @@
                             <h2 class="page-title" text-center>参考文献</h2>
                             <div class="marker">c</div>
                         </div>
-                        <p class='subtitle'>参考一下啊！
+                        <p class='info'>
+                          蒋军, 陈雪飞, 赵晓, & 陈安涛. (2010). 情绪对注意的影响:基于注意网络的分析. 西南大学学报(自然科学版), 32(4), 163-167.
+                          <br><p>
+                          荆秀娟, & 王一峰. (2015). 注意网络间的关系及其心理与生理机制. 心理科学进展, 23(9), 1531-1539.
+                          <br><p>
+                          刘小禹, 章　 凯.情绪智力影响工作倦怠机制中工作压力的中介作用研究 [ J] .西南师范大学学报(自然科学版),
+                          <br><p>
+                          胡发军, 张庆林.大学新生 SCL-290 调查结果的元分析 [ J] .西南大学学报(自然科学版), 2009, 31(2):152-155.
+                          <br><p>
+                          李贺, & 蔡厚德. (2013). 情绪对注意功能网络的调制. 心理科学进展, 21(1), 59-67.
+                          <br><p>
+                          孙建华. (2014). 注意研究的发展以及posner的注意系统理论. 哈尔滨职业技术学院学报(5), 161-162.
+                          <br><p>
+                          Mackie, M. A., Dam, N. T. V., & Fan, J. (2013). Cognitive control and attentional functions. Brain & Cognition, 82(3), 301-312.
+                          <br><p>
+                          Fan, J., Mccandliss, B. D., Sommer, T., Raz, A., & Posner, M. I. (2002). Testing the efficiency and independence of attentional networks. Journal of Cognitive Neuroscience, 14(3), 340-7.
+                          <br><p>
+                          Posner, M. I., & Rothbart, M. K. (2007). Research on attention networks as a model for the integration of psychological science. Annual Review of Psychology, 58(1), 1.
                         </p>
                     </div>
                 </div>
