--- a/HTML/index.html
+++ b/HTML/index.html
@@ -68,11 +68,20 @@
                               <div style="margin:0 auto;width:200px;">
                               <br>
                               <br>
+                              <input type=button value="进入实验一" class="btn btn-primary btn-lg" onclick="window.open('http://research.millisecond.com/weicong1203/mp.web')">
                               <br>
                               <br>
-                              <input type=button value="进入问卷" class="btn btn-primary btn-lg" onclick="window.open('https://bnupsych.asia.qualtrics.com/jfe/form/SV_a5xjFkddYHiu513')">
+                              <br>
+                              <input type=button value="&nbsp;&nbsp;&nbsp;&nbsp;进入问卷&nbsp;&nbsp;" class="btn btn-primary btn-lg" onclick="window.open('https://bnupsych.asia.qualtrics.com/jfe/form/SV_emHpGxFTfm2AoUR')">
+                              <br>
+                              <br>
                               <img src="assets/images/qualtrics.png">
-                              <input type=button value="进入实验" class="btn btn-primary btn-lg" onclick="window.open('http://www.baidu.com/')">
+                              <br>
+                              大家也可以戳这个二维码进入问卷哟~
+                              <br>
+                              <br>
+                              <br>
+                              <input type=button value="进入实验二" class="btn btn-primary btn-lg" onclick="window.open('http://research.millisecond.com/weicong1203/mp.web')">
                               </div>
                             </p>
                         </div>
@@ -102,9 +111,14 @@
                             <h2 class="page-title" text-center>实验简介</h2>
                             <div class="marker">a</div>
                         </div>
-                        <p class='subtitle'>这是一个实验简介
-                        </p>
-                        <p class="info">快来介绍一下！
+                        <p class="info" text-align:"justify">
+                          &nbsp;&nbsp;&nbsp;&nbsp;上世纪90年代，Ponser 与其同事最先提出了注意可分为具有不同功能和神经解剖基础的三个注意网络, 它们分别执行注意的警觉、定向和执行控制功能。在此基础上，Fan等人首先提出了注意网络测试(Attention Network Test, ANT)的方法来分析注意网络各部分的效率及其独立性。作为一种简单有效的行为实验手段，ANT范式一直以来为广大研究者用来进行有关注意网络的各项研究，其中包括了情绪因素对注意网络工作的影响。
+                          <br>
+                          &nbsp;&nbsp;&nbsp;&nbsp;已有研究表明，正性情绪可以扩大注意的范围,增加了人们的创造性和认知的灵活性，在负性情绪下，注意更集中完成任务时有更高的正确率。
+                          <br>
+                          &nbsp;&nbsp;&nbsp;&nbsp;虽然先前的研究能够说明情绪对注意是否发生影响 , 但并不能清楚的说明情绪是如何影响注意的.这是因为以往研究往往将注意看作一个单一的认知过程, 作为因变量的注意功能也是整体测试的结果。正如Posner所指，注意包含了不同注意网络的作用过程，要探讨情绪对注意的影响，必须分别研究情绪作用于注意不同网络过程的结果。
+                          <br>
+                          &nbsp;&nbsp;&nbsp;&nbsp;因此，本实验计划利用 ANT 任务分离情绪对注意影响, 揭示情绪对注意网络中警觉过程的影响机制。
                         </p>
                     </div>
                 </div>
@@ -127,10 +141,13 @@
                             <h2 class="page-title" text-center>实验设计</h2>
                             <div class="marker">w</div>
                         </div>
-                        <p class='subtitle'>这是一个实验设计
+                        <p class="info">
+                          <br>
+                          &nbsp;&nbsp;&nbsp;&nbsp;本实验采用3（情绪：高水平/低水平/中等水平）*2（线索种类：无线索/双线索）混合设计，共由三部分组成。首先将被试随机均分为三组，任选两组采用音乐刺激的方式启动高、低两种水平的情绪状态；然后对所有被试使用国际流行的积极与消极情感量表（positive and negative affect scale, PANAS）和状态—特质焦虑问卷（state-trait anxiety inventory, SA）评估被试情绪水平。随后，被试被要求完成包含双线索与无线索情形的注意网络测试任务（attention network test, ANT）。收集被试在两种线索条件下正确反应的反应时数据RT，并按照经典ANT范式的分析方法分析两种线索下的RT差异及情绪水平对注意网络中警觉过程的影响。
+                          <br>
+                          &nbsp;&nbsp;&nbsp;&nbsp;实验的第三部分（即警觉测量部分）包含一个练习环节和三个实验组块（block），每个组块包含48个试次，组块内部两种线索及目标刺激出现的位置均为均衡分布，在每两个组块间，被试可以选择休息一段时间。在练习环节，每个试次结束后都有反应时RT和正确与否的反馈。
                         </p>
-                        <p class="info">快来设计一下！
-                    </div>
+                      </div>
                 </div>
             </div>
         </div>                                                                 <!-- Work ends here  -->
@@ -149,7 +166,10 @@
                             <h2 class="page-title" text-center>结果与讨论</h2>
                             <div class="marker">c</div>
                         </div>
-                        <p class='subtitle'>来吧来吧！快来讨论吧！
+                        <p class="info">
+                          <br>
+                          <br>
+                          &nbsp;&nbsp;&nbsp;&nbsp;根据量表的评估结果将被试分为三种情绪水平组，剔除被试未反应、错误反应的试次，再根据3SD原则删除每组RT数据中的极端值。用配对样本的T检验分析两种不同线索下RT数据的差异。若差异明显，再根据Fan等人的划分方法及本实验研究目的，计算警觉时间T=RT_无线索-RT_双线索，用混合设计方差分析计算不同情绪水平对警觉过程的影响差异，若差异显著，则说明情绪水平可以通过影响注意网络的子网络——警觉过程的方式参与注意机制的运行，我们的假设成立，并可以进一步通过不同线索下与基线情况（即中等水平）的比较，分析情绪水平作用于警觉的具体过程。
                         </p>
                     </div>
                 </div>
@@ -172,21 +192,19 @@
                         </div>
                         <p class='info'>
                           蒋军, 陈雪飞, 赵晓, & 陈安涛. (2010). 情绪对注意的影响:基于注意网络的分析. 西南大学学报(自然科学版), 32(4), 163-167.
-                          <br><p>
+                          <br>
                           荆秀娟, & 王一峰. (2015). 注意网络间的关系及其心理与生理机制. 心理科学进展, 23(9), 1531-1539.
-                          <br><p>
+                          <br>
                           刘小禹, 章　 凯.情绪智力影响工作倦怠机制中工作压力的中介作用研究 [ J] .西南师范大学学报(自然科学版),
-                          <br><p>
-                          胡发军, 张庆林.大学新生 SCL-290 调查结果的元分析 [ J] .西南大学学报(自然科学版), 2009, 31(2):152-155.
-                          <br><p>
+                          <br>
                           李贺, & 蔡厚德. (2013). 情绪对注意功能网络的调制. 心理科学进展, 21(1), 59-67.
-                          <br><p>
+                          <br>
                           孙建华. (2014). 注意研究的发展以及posner的注意系统理论. 哈尔滨职业技术学院学报(5), 161-162.
-                          <br><p>
+                          <br>
                           Mackie, M. A., Dam, N. T. V., & Fan, J. (2013). Cognitive control and attentional functions. Brain & Cognition, 82(3), 301-312.
-                          <br><p>
+                          <br>
                           Fan, J., Mccandliss, B. D., Sommer, T., Raz, A., & Posner, M. I. (2002). Testing the efficiency and independence of attentional networks. Journal of Cognitive Neuroscience, 14(3), 340-7.
-                          <br><p>
+                          <br>
                           Posner, M. I., & Rothbart, M. K. (2007). Research on attention networks as a model for the integration of psychological science. Annual Review of Psychology, 58(1), 1.
                         </p>
                     </div>
