--- a/HTML/index.html
+++ b/HTML/index.html
@@ -157,7 +157,7 @@
             <div class="container main">
                 <div class="row">
                     <div class="col-md-6 left" id="contact_left">
-                        <img class="img-responsive img-rabbit" src="assets/images/contact.jpg">
+                        <img class="img-responsive img-rabbit" src="assets/images/abc.jpg">
                     </div>
 
                     <div class="col-md-6 right" id="contact_right">
