--- a/HTML/index.html
+++ b/HTML/index.html
@@ -81,7 +81,7 @@
                               <br>
                               <br>
                               <br>
-                              <input type=button value="进入实验二" class="btn btn-primary btn-lg" onclick="window.open('http://research.millisecond.com/weicong1203/mp.web')">
+                              <input type=button value="进入实验二" class="btn btn-primary btn-lg" onclick="window.open('http://research.millisecond.com/weicong1203/apant.web')">
                               </div>
                             </p>
                         </div>
